--- a/src/features/blog/content/theme-switcher-component.mdx
+++ b/src/features/blog/content/theme-switcher-component.mdx
@@ -7,8 +7,8 @@ updatedAt: 2025-04-11
 ---
 
 <ComponentPreview
-  name="theme-switcher-demo"
-  openInV0Url="https://chanhdai.com/r/theme-switcher.json"
+  name="apple-hello-effect-en-demo"
+  openInV0Url="https://thevinduw.de/r/theme-switcher.json"
 />
 
 ## Installation
